# ChangeLog for dev-ruby/nio4r
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nio4r/ChangeLog,v 1.1 2014/05/07 01:04:50 mrueg Exp $

*nio4r-1.0.0 (07 May 2014)

  07 May 2014; Manuel Rüger <mrueg@gentoo.org> +files/nio4r-1.0.0-extconf.patch,
  +metadata.xml, +nio4r-1.0.0.ebuild:
  Initial version.