@@ -1,5 +1,5 @@
 AUX nio4r-1.0.0-extconf.patch 484 SHA256 43fbf492833821846a3ece2c64b72ce373bc4621493055a821a2b1ed58535515 SHA512 d955857ff48164926cf304f2d90cc963f3e5a733eda745014668b35ebbe71205a49c41b5dc482234241500bc3060453d1fb35ef15eb7f69304fe444a347b673c WHIRLPOOL 02566511ad2dff1db7802a3970f12c97a2e991db65640a17da79f28650cda80daa3317211f287bd37938c337ce64936ec0c9d8a4eb14c9cfc230773df1d3fb48
 DIST nio4r-1.0.0.gem 88064 SHA256 2ee3b2f1d8f8b91ee65bba485309acff284d6a824546b7b9960ce54cd7211559 SHA512 2f8f6d09e978a982b5279459c3db191923b7ac4c2f29f823d9145581b73558c5ceadec4a8e3cf9de70e3bb4f235be93ce7cea423da502d5375e6ac1a184b2277 WHIRLPOOL 0d59af8c3ea60ec066a0edeaf22f1c215dcf79d21e40968157af52969d1e19d6f78e1f42a29cc97f2ce0ecf15c7aa5fce9d991bbbd9c8c89b9ee03e37afe49d3
-EBUILD nio4r-1.0.0.ebuild 1071 SHA256 3e50e1a16a5c15c47f1c169b6e1e4ef2d24049342cc6611072dbd16b253d8bd4 SHA512 807004090fb9394f750f19e8bb58c68714514d601fa1ae5a0f018f20c419edceb59cc63d1bd0e97c9ee245a51207080331b46701f1e16fbf48fa1be36d5b8c8c WHIRLPOOL 2234e9de46cc0311f0671bbde2b03c5291e87dceb9aff09550b60e156180b3e535951f43a721fad4b63d4766626b9c7455054306b70812669254112876493d60
-MISC ChangeLog 367 SHA256 629c1b2a42055d2a264884a791101099bfc704ae3181a3cb75921a729a8e467b SHA512 3ecf47f0e836ec3958e09453c462aedda3a82e4e11043fd5edbf0adf5a85afc0c2832afc7ff11d094c18e0310b1a189a72db397a21227c1b3a623b141d420487 WHIRLPOOL f08ec3e96d64578d91e2522ac76fef1277097ed40859bf7203fc4120997f273fbc0b786b5c81ead9e347d965f2887958498720ea67156ea91a73cf0e1d039177
+EBUILD nio4r-1.0.0.ebuild 1072 SHA256 6c02e49975fd7b6aaf34cfbc8e1773368d92f2384b169607a7253e98863b02db SHA512 95c2c1fb2dfaaa9ce3f471f27905d4c955ce8f1f585a006102356e41099af6f30be693226b61183a059eda0395dda6fc8dd568cb0fc55dd6ec76a5417d164b7a WHIRLPOOL 7a10afdb5a1182e64781b20d953262afb5972de968df72873dace6f5107d55416178a9ed3636ec70273d655ab57a37eac4a4d9a97a275447cc50f20c6efbb712
+MISC ChangeLog 453 SHA256 ce31646a6a92dbdb854234741d93234ef8edb2b63faba245a83b1945e8765d12 SHA512 f90701bf72693120e62317355cc8b76c191ed32dc16fec5a96efaf0ec819deea2f8de901770b723bc847aba6c9fd3378f6f70d9b0288fe938f3dd2d81e8e78fa WHIRLPOOL a92bf0225f2a12a6616703450451447bded44b90c5923949bc00e637d89ae04789d673f765eb61f1ba2f18aa6c84c65ca3213862b0bfa1628ea31d0361a4cacf
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
