@@ -6,8 +6,8 @@ HOMEPAGE=https://launchpad.net/wicd
 IUSE=X ambiance +gtk ioctl libnotify mac4lin ncurses nls +pm-utils
 KEYWORDS=amd64 ~arm ~mips ppc ppc64 x86
 LICENSE=GPL-2
-RDEPEND=dev-python/dbus-python X? ( gtk? ( dev-python/pygtk || ( x11-misc/ktsuss x11-libs/gksu kde-base/kdesu ) ) ) || ( net-misc/dhcpcd net-misc/dhcp net-misc/pump ) net-wireless/wireless-tools net-wireless/wpa_supplicant || ( sys-apps/net-tools sys-apps/ethtool ) !gtk? ( dev-python/pygobject:2 ) ioctl? ( dev-python/python-iwscan dev-python/python-wpactrl ) libnotify? ( dev-python/notify-python ) ncurses? ( dev-python/urwid dev-python/pygobject:2 ) pm-utils? ( >=sys-power/pm-utils-1.1.1 ) =dev-lang/python-2* =dev-lang/python-2*[ncurses?,xml]
+RDEPEND=dev-python/dbus-python X? ( gtk? ( dev-python/pygtk ) || ( x11-misc/ktsuss x11-libs/gksu kde-base/kdesu ) ) || ( net-misc/dhcpcd net-misc/dhcp net-misc/pump ) net-wireless/wireless-tools net-wireless/wpa_supplicant || ( sys-apps/net-tools sys-apps/ethtool ) !gtk? ( dev-python/pygobject:2 ) ioctl? ( dev-python/python-iwscan dev-python/python-wpactrl ) libnotify? ( dev-python/notify-python ) ncurses? ( dev-python/urwid dev-python/pygobject:2 ) pm-utils? ( >=sys-power/pm-utils-1.1.1 ) =dev-lang/python-2* =dev-lang/python-2*[ncurses?,xml]
 SLOT=0
 SRC_URI=http://launchpad.net/wicd/1.7/1.7.2.4/+download/wicd-1.7.2.4.tar.gz mac4lin? ( http://dev.gentoo.org/~anarchy/dist/wicd-mac4lin-icons.tar.xz ) ambiance? ( http://freetimesblog.altervista.org/blog/wp-content/uploads/downloads/2010/05/Icone-Wicd-Lucid.tar.gz )
 _eclasses_=distutils	34e0f373c466bb0e97ba194735f1acf2	eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	python	be9965681d83c3980660a2660ac95e95	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=84786d9b5e477d5a4ffaf74aa1f15a01
+_md5_=a11f1715a9f81efaf84a14092118adde
