@@ -15,14 +15,14 @@ AUX wicd-init.d 434 SHA256 5546deda3d5fa8f6ee1125922f1217182b24d68a22f5a1212509b
 DIST Icone-Wicd-Lucid.tar.gz 9015 SHA256 6e4e3483c6cff7398e6871dd3e4360e361e5c6e64007e8e1240fd1c259ac707e SHA512 0df0dbdf05b462264dca2dd9955454a82f688b0fbfa7c2ad70a424df57eb27b35561d37819fc88b5746cff8a54de5b7b43ec325d2f98a4a1a30e4d500e86d2f8 WHIRLPOOL 336f363092c9bac7523047b6052a856a699820147967820418c6ac1ca528c472d371c6c211c505c325b5eb001812042c01425b05e1dfdf2d4a528f96686c530a
 DIST wicd-1.7.2.4.tar.gz 439297 SHA256 dcfdfb5dbbb49dbb9b205fddf064d6b1a4e88f66f1cf40d12fb7fe0e0c7cdc97 SHA512 6dd8d4726c5f9c943d90305b7ed70573b42b5dae00de443209d9f526778e91ac01aabffa14447c47374b4d9986133aacfcc970735d1b5befa232da44d3190d7c WHIRLPOOL 59885a22dbf350e73a55fdbf7ea1c9b93a339edae116beb1c22c271762d90488ecdeb7952a4efc8241d362b5bafcaccf88053c4d5c41468cba0cd524cf2a5756
 DIST wicd-mac4lin-icons.tar.xz 53136 SHA256 4c48c769c71f962415e3bd3573557e9288351afb867347f9a6f652883ae31011
-EBUILD wicd-1.7.2.4-r2.ebuild 4717 SHA256 cbc88379d72b1e1debb7aad05133ce3c647d78a9ef339b3f12ebabfdf10c7e5a SHA512 5fb8e4ffb954125a32bc0746bf5ddee0e0d98e2c5b981b323441e01e88af974669a72a57022824a2f4c961cdfc0b3ca73909ae96162bd2cebb671e6410e2b7c9 WHIRLPOOL 2b9e813f6b3b5b5d319d885bfbd596cf0a70ba584592a2d73df46457951d5f066506d9cf7988d3078be5d55e5470faec5aab7486d0bb7706207f5e063041813f
-EBUILD wicd-1.7.2.4-r3.ebuild 4794 SHA256 0b68b8a2aa0faab3aa010ed42fadfcd10107018eeff9722f42442c15d077be49 SHA512 26596a702965bfdcbe91d0ecc7dcc1ecd9d4fd317c8086858d4744cba2298f02b219372b71640a1d40aec427a891854491342559d4decfbb816916f20a7c721f WHIRLPOOL 695b989e9d5c711cc3c9efccd3da5391439f0a2e75bd317c74820e20854b68cb9947002bb239bca3535f4aea67fc792f23a55d197d42b4d1e83f0fac79448fb7
-MISC ChangeLog 24503 SHA256 c0d23c650fe81f00d2653dd172dbb188a14c60c3ced60ec28c5642de564d2c41 SHA512 4814d870d9dff8bfafe17f6e0d6f4b616c222b82955ef142680876cd6f751cf3c7a7708fb3c2216bd0db823b51d310234b3a0baf40f1f0dc3d9a026e2cd9e0bc WHIRLPOOL 42b737dd4819ee2c9cacaad544f8ffc519b8f0b74ae03302e36bf44dde5fe67446ca493129d3215295a4dc33960c59d4f46aed3be02fa93bb434ca5000a01ba4
+EBUILD wicd-1.7.2.4-r2.ebuild 4713 SHA256 7cc88cf4e320020f610d50b2f52980619b23b45407724f4616536705108bef15 SHA512 50d067dba89b46216d0753f0f06b6f556488eef0c384c0f9f0fef1aa982d80b65b246e31f39bf1b30d093ebe4ab7edb384802ed887f4dd7246889ff0d5c8cf1b WHIRLPOOL 9926d9da0995a9ee3d17a3ac76dffd4ecda67bdc0318050cfdfe02465bba4fdc5411edd2f1c7af1ee80ba42447f8ac7fc21fb8b6d7e890aac28302be8b0a0035
+EBUILD wicd-1.7.2.4-r3.ebuild 4794 SHA256 491c71669a822406f4d260d7175dda8596d53a6736f153219263adeeed36300b SHA512 903d6b800d0eb920736af7ce09aa6ba99b369da7eb8fd0679c407bd9d468823e509bff594353312ed85ac7e53eff86945d4ec7844a1e8b9caef50cdb5cbcdd3d WHIRLPOOL 83631dc6986b117301069974bb773652aa0039c4be4250d3833ae6edca85d038ada7c2f7af3ea72b716bf98b6a147aba2c0a25b24aceea6a0859143f050dda11
+MISC ChangeLog 24638 SHA256 7fbe171f6d539b010c0787f272c9ffd5acac9e3d93e8db6e49a04ecadb37b056 SHA512 464d90dd532571cdcdb2cf2740d59f9e4f5404baa1e3de752e154abfe914231f97e7d86beb69c788b7aa511bfc2dc3ba84feb0542d246c75d6f325dcbeeb3a73 WHIRLPOOL a154b54ad3ca64056eb12cb13f004284adbcd5aa521454a0e93bc77156f4d123a3c8cca7488c9cc85c117f02f9d5a2f7d2f11cd79b243012d82d66745ec9e5a1
 MISC metadata.xml 829 SHA256 34aaf71ae35098b6860ba090961034321b4ac982e5b9e7ee9cfc22769e27aa77 SHA512 4a8725dd2eedfc60f7c90630cfb0a5d3df28d6abed43b6555423f81d88b66db3d684fae48fb316f4d5aff1918275ca53035afaa6ae9a85f1d1d9307305c7912c WHIRLPOOL 983cbe2b47b1c50c2e16d1a8ebed0aa235fb3d8ac5d1d987997e11949f018171cb6f0d3136f34bb764f50be4fff827c14def54e3e4c8834f1205c7fef540d728
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNbbc4ACgkQCaWpQKGI+9SQrwCeNnInypQld02bPj4Xv7rz0luy
-4AoAoIQ323gBB+5IktKqkt9RyGquSMhM
-=fNHA
+iF4EAREIAAYFAlNpxSgACgkQid6yGVZcMry/tAD/Q9Vg/oIlafE0jykJrNUpw+Js
+mjzX478aHon/M4IL8KYBAOBz1uF9PgJAqbkGkiI2xshhbNHGc/n+bRyz7uwZE4a4
+=wmMa
 -----END PGP SIGNATURE-----
