@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/wicd
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/ChangeLog,v 1.145 2014/04/26 08:26:53 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/ChangeLog,v 1.146 2014/05/07 05:31:09 tomka Exp $
+
+  07 May 2014; Thomas Kahle <tomka@gentoo.org> wicd-1.7.2.4-r2.ebuild,
+  wicd-1.7.2.4-r3.ebuild:
+  fix wrong dep nesting (bug 509730)
 
   26 Apr 2014; Pacho Ramos <pacho@gentoo.org> wicd-1.7.2.4-r3.ebuild:
   Adapt to latest pygobject don't providing python2.6 support
