@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/nio4r
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nio4r/ChangeLog,v 1.1 2014/05/07 01:04:50 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nio4r/ChangeLog,v 1.2 2014/05/07 05:19:41 patrick Exp $
+
+  07 May 2014; Patrick Lauer <patrick@gentoo.org> nio4r-1.0.0.ebuild:
+  Whitespace
 
 *nio4r-1.0.0 (07 May 2014)
 
